# trail-pacer

./: .gitignore  README.md  main.py  pyproject.toml  todo_list.txt
notebooks/: 00_comparing_predictions.ipynb  00_full_trail_pacer.ipynb  01_opening_fits.ipynb  01_profile_performance.ipynb  02_gpx_analysis.ipynb  03_splitting_gpx copy.ipynb  03_splitting_gpx.ipynb
trail_pacer/: gpx_utils.py  models.py  utils.py
