[project]
name = "trail-pacer"
version = "0.1.0"
description = "A tool to create pacing plans from GPX files"
authors = [{name = "Sauniere", email = "lucas.sauniere@ipsa.fr"}]
dependencies = [
    "gpxpy>=1.6.2",
    "overpy>=0.7",
    "scipy",
    "pandas",
    "matplotlib",
    "plotly",
    "folium",
    "numpy",
    "requests",
    "fastapi",
    "uvicorn",
    "jupytext",   # to convert .py notebooks to .ipynb
]

requires-python = ">=3.12"

[project.scripts]
gpx-pacer = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
]

